Inclusão de uma imagem no centro

--- a/Projeto página/index.html
+++ b/Projeto página/index.html
@@ -47,6 +47,7 @@
                 de todo o mundo a se
                 concentrarem
                 naquilo que é realmente importante para elas.</p>
+            <img class="imagem-central" src="Imagens/Equipe.jpg" alt="Equipe Trabalhando">
 
 
         </section>
