Atualização de Dados

--- a/Projeto página/index.html
+++ b/Projeto página/index.html
@@ -100,34 +100,35 @@
 
     </section>
 
-    <section>
+    <section class="Salario-por-função">
 
-        <h1>Design</h1>
+        <h1 class="Titulo1">Design</h1>
 
-        <div>
+        <div class="Product-Designer">
             <p>Product Designer</p>
             <p>Full-time Faixa salarial: R$7.000</p>
         </div>
 
-        <div>
-            <h1>UX Designer</h1>
+        <div class="UX-Designer">
+            <p>UX Designer</p>
             <p>Full-time Faixa salarial: R$6.000</p>
         </div>
 
 
 
-        <h1>Desenvolvimento de Software</h1>
-        <div>
+        <h1 class="Titulo2">Desenvolvimento de Software</h1>
+
+        <div class="Desenvolvedor-iOS">
             <p>Desenvolvedor(a) iOS</p>
             <p>Full-time Faixa salarial: R$8.000</p>
         </div>
 
-        <div>
+        <div class="Desenvolvedor-Front-end">
             <p>Desenvolvedor(a) Front-end</p>
             <p>Full-time Faixa salarial: R$7.000</p>
         </div>
 
-         <div>
+         <div class="Desenvolvedor-Back-end">
             <p>Desenvolvedor(a) Back-end</p>
             <p>Full-time Faixa salarial: R$8.000</p>
         </div>
@@ -135,7 +136,7 @@
 
     </section>
 
-    <section>
+    <section class="Desenvolvedora">
         <p>Veja o que nossos colaboradores falam sobre nós</p>
         <h1>OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</h1>
 
